--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -2,6 +2,8 @@
 name: goreleaser
 
 on:
+  release:
+    types: [published]
   push:
     tags:
       - 'v*'
@@ -25,7 +27,7 @@ jobs:
           go-version-file: 'go.mod'
 
       - name: Run GoReleaser (release)
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'release'
         uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
